# glob-dev-exp-devops-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
glob_dev_exp_devops_project/: exceptions.py
glob_dev_exp_devops_project/backend/: rest_app.py
glob_dev_exp_devops_project/client/: web_app.py
glob_dev_exp_devops_project/db/: db_connector.py  db_utils.py
glob_dev_exp_devops_project/server/: rest_app.py
static/styles/: style.css
templates/client/: add_user_data.html  display_added_user_data.html  display_all_user_data.html  display_user_data.html  error.html  get_user_data.html  index.html  user_data.html
tests/db/: test_db_connector.py
